# discord-slack-loader

./: Cargo.toml
src/: loader.rs  main.rs
src/slack_export/: channel.rs  user.rs
