[package]
name = "discord-slack-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.6.1", features = ["chrono_0_4"] }
serenity = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
url = { version = "2.5.0", features = ["serde"] }
